reordered work posts and added global fix for scroll bar page shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700,800|Roboto:400,400i,700,700i&display=swap');
 
+html {
+  margin-left: calc(100vw - 100%);
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
